Fix record embed icon label spacing

--- a/sass/includes/_record-embed__no-image.scss
+++ b/sass/includes/_record-embed__no-image.scss
@@ -7,11 +7,10 @@
   &__icon {
     background-color: $color__blue_3;
     border-radius: 50%;
-    margin-bottom: 1rem;
+    margin: 0 auto 1rem;
     padding: 1rem;
     width: 5rem;
     height: 5rem;
-    margin: auto;
     background-repeat: no-repeat;
     background-position: center;
     background-size: 3rem;
